Implemented Dicom to Dataframe V1 and added more examples to pydicom_example.ipynb

--- a/0_Data_Understanding/pydicom_example.ipynb
+++ b/0_Data_Understanding/pydicom_example.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T15:45:15.904978Z",
-     "start_time": "2024-04-22T15:45:15.820557Z"
+     "end_time": "2024-04-26T17:58:12.720180Z",
+     "start_time": "2024-04-26T17:58:11.798169Z"
     }
    },
    "source": [
@@ -28,7 +28,8 @@
     "# Print DICOM attributes\n",
     "# Print all attributes\n",
     "print(\"All attributes:\")\n",
-    "print(scan_frame.dir())\n",
+    "for attribute in scan_frame.dir():\n",
+    "    print(attribute, \":\", \" dtype: \", type(getattr(scan_frame, attribute, None)))\n",
     "print(\"=\" * 100)\n",
     "\n",
     "# Print specific attributes\n",
@@ -50,7 +51,107 @@
      "output_type": "stream",
      "text": [
       "All attributes:\n",
-      "['AccessionNumber', 'AcquisitionDate', 'AcquisitionDateTime', 'AcquisitionNumber', 'AcquisitionTime', 'AdmittingDiagnosesDescription', 'BitsAllocated', 'BitsStored', 'BodyPartExamined', 'CTDIPhantomTypeCodeSequence', 'CTDIvol', 'CalciumScoringMassFactorDevice', 'Columns', 'ContentDate', 'ContentTime', 'ConvolutionKernel', 'DataCollectionCenterPatient', 'DataCollectionDiameter', 'DateOfLastCalibration', 'DeidentificationMethodCodeSequence', 'DistanceSourceToDetector', 'DistanceSourceToPatient', 'EstimatedDoseSaving', 'Exposure', 'ExposureModulationType', 'ExposureTime', 'FilterType', 'FocalSpots', 'FrameOfReferenceUID', 'GantryDetectorTilt', 'GeneratorPower', 'HighBit', 'ImageComments', 'ImageOrientationPatient', 'ImagePositionPatient', 'ImageType', 'InstanceNumber', 'IrradiationEventUID', 'IssuerOfAccessionNumberSequence', 'KVP', 'LargestImagePixelValue', 'LongitudinalTemporalInformationModified', 'Manufacturer', 'ManufacturerModelName', 'Modality', 'OperatorsName', 'OtherPatientNames', 'PatientAge', 'PatientBirthDate', 'PatientID', 'PatientIdentityRemoved', 'PatientMotherBirthName', 'PatientName', 'PatientPosition', 'PatientSex', 'PatientSize', 'PatientWeight', 'PhotometricInterpretation', 'PixelData', 'PixelRepresentation', 'PixelSpacing', 'PositionReferenceIndicator', 'ProcedureCodeSequence', 'ReconstructionDiameter', 'ReconstructionTargetCenterPatient', 'ReferencedImageSequence', 'ReferringPhysicianName', 'RequestedProcedureCodeSequence', 'RescaleIntercept', 'RescaleSlope', 'RescaleType', 'RotationDirection', 'Rows', 'SOPClassUID', 'SOPInstanceUID', 'SamplesPerPixel', 'SeriesDate', 'SeriesInstanceUID', 'SeriesNumber', 'SeriesTime', 'SingleCollimationWidth', 'SliceLocation', 'SliceThickness', 'SmallestImagePixelValue', 'SoftwareVersions', 'SourceImageSequence', 'SpecificCharacterSet', 'SpiralPitchFactor', 'StudyDate', 'StudyID', 'StudyInstanceUID', 'StudyTime', 'TableFeedPerRotation', 'TableHeight', 'TableSpeed', 'TimeOfLastCalibration', 'TotalCollimationWidth', 'WindowCenter', 'WindowCenterWidthExplanation', 'WindowWidth', 'XRayTubeCurrent']\n",
+      "AccessionNumber :  dtype:  <class 'str'>\n",
+      "AcquisitionDate :  dtype:  <class 'str'>\n",
+      "AcquisitionDateTime :  dtype:  <class 'str'>\n",
+      "AcquisitionNumber :  dtype:  <class 'pydicom.valuerep.IS'>\n",
+      "AcquisitionTime :  dtype:  <class 'str'>\n",
+      "AdmittingDiagnosesDescription :  dtype:  <class 'str'>\n",
+      "BitsAllocated :  dtype:  <class 'int'>\n",
+      "BitsStored :  dtype:  <class 'int'>\n",
+      "BodyPartExamined :  dtype:  <class 'str'>\n",
+      "CTDIPhantomTypeCodeSequence :  dtype:  <class 'pydicom.sequence.Sequence'>\n",
+      "CTDIvol :  dtype:  <class 'float'>\n",
+      "CalciumScoringMassFactorDevice :  dtype:  <class 'list'>\n",
+      "Columns :  dtype:  <class 'int'>\n",
+      "ContentDate :  dtype:  <class 'str'>\n",
+      "ContentTime :  dtype:  <class 'str'>\n",
+      "ConvolutionKernel :  dtype:  <class 'pydicom.multival.MultiValue'>\n",
+      "DataCollectionCenterPatient :  dtype:  <class 'list'>\n",
+      "DataCollectionDiameter :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "DateOfLastCalibration :  dtype:  <class 'str'>\n",
+      "DeidentificationMethodCodeSequence :  dtype:  <class 'pydicom.sequence.Sequence'>\n",
+      "DistanceSourceToDetector :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "DistanceSourceToPatient :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "EstimatedDoseSaving :  dtype:  <class 'float'>\n",
+      "Exposure :  dtype:  <class 'pydicom.valuerep.IS'>\n",
+      "ExposureModulationType :  dtype:  <class 'str'>\n",
+      "ExposureTime :  dtype:  <class 'pydicom.valuerep.IS'>\n",
+      "FilterType :  dtype:  <class 'str'>\n",
+      "FocalSpots :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "FrameOfReferenceUID :  dtype:  <class 'pydicom.uid.UID'>\n",
+      "GantryDetectorTilt :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "GeneratorPower :  dtype:  <class 'pydicom.valuerep.IS'>\n",
+      "HighBit :  dtype:  <class 'int'>\n",
+      "ImageComments :  dtype:  <class 'str'>\n",
+      "ImageOrientationPatient :  dtype:  <class 'pydicom.multival.MultiValue'>\n",
+      "ImagePositionPatient :  dtype:  <class 'pydicom.multival.MultiValue'>\n",
+      "ImageType :  dtype:  <class 'pydicom.multival.MultiValue'>\n",
+      "InstanceNumber :  dtype:  <class 'pydicom.valuerep.IS'>\n",
+      "IrradiationEventUID :  dtype:  <class 'pydicom.uid.UID'>\n",
+      "IssuerOfAccessionNumberSequence :  dtype:  <class 'pydicom.sequence.Sequence'>\n",
+      "KVP :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "LargestImagePixelValue :  dtype:  <class 'int'>\n",
+      "LongitudinalTemporalInformationModified :  dtype:  <class 'str'>\n",
+      "Manufacturer :  dtype:  <class 'str'>\n",
+      "ManufacturerModelName :  dtype:  <class 'str'>\n",
+      "Modality :  dtype:  <class 'str'>\n",
+      "OperatorsName :  dtype:  <class 'pydicom.valuerep.PersonName'>\n",
+      "OtherPatientNames :  dtype:  <class 'pydicom.valuerep.PersonName'>\n",
+      "PatientAge :  dtype:  <class 'str'>\n",
+      "PatientBirthDate :  dtype:  <class 'str'>\n",
+      "PatientID :  dtype:  <class 'str'>\n",
+      "PatientIdentityRemoved :  dtype:  <class 'str'>\n",
+      "PatientMotherBirthName :  dtype:  <class 'pydicom.valuerep.PersonName'>\n",
+      "PatientName :  dtype:  <class 'pydicom.valuerep.PersonName'>\n",
+      "PatientPosition :  dtype:  <class 'str'>\n",
+      "PatientSex :  dtype:  <class 'str'>\n",
+      "PatientSize :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "PatientWeight :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "PhotometricInterpretation :  dtype:  <class 'str'>\n",
+      "PixelData :  dtype:  <class 'bytes'>\n",
+      "PixelRepresentation :  dtype:  <class 'int'>\n",
+      "PixelSpacing :  dtype:  <class 'pydicom.multival.MultiValue'>\n",
+      "PositionReferenceIndicator :  dtype:  <class 'str'>\n",
+      "ProcedureCodeSequence :  dtype:  <class 'pydicom.sequence.Sequence'>\n",
+      "ReconstructionDiameter :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "ReconstructionTargetCenterPatient :  dtype:  <class 'list'>\n",
+      "ReferencedImageSequence :  dtype:  <class 'pydicom.sequence.Sequence'>\n",
+      "ReferringPhysicianName :  dtype:  <class 'pydicom.valuerep.PersonName'>\n",
+      "RequestedProcedureCodeSequence :  dtype:  <class 'pydicom.sequence.Sequence'>\n",
+      "RescaleIntercept :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "RescaleSlope :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "RescaleType :  dtype:  <class 'str'>\n",
+      "RotationDirection :  dtype:  <class 'str'>\n",
+      "Rows :  dtype:  <class 'int'>\n",
+      "SOPClassUID :  dtype:  <class 'pydicom.uid.UID'>\n",
+      "SOPInstanceUID :  dtype:  <class 'pydicom.uid.UID'>\n",
+      "SamplesPerPixel :  dtype:  <class 'int'>\n",
+      "SeriesDate :  dtype:  <class 'str'>\n",
+      "SeriesInstanceUID :  dtype:  <class 'pydicom.uid.UID'>\n",
+      "SeriesNumber :  dtype:  <class 'pydicom.valuerep.IS'>\n",
+      "SeriesTime :  dtype:  <class 'str'>\n",
+      "SingleCollimationWidth :  dtype:  <class 'float'>\n",
+      "SliceLocation :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "SliceThickness :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "SmallestImagePixelValue :  dtype:  <class 'int'>\n",
+      "SoftwareVersions :  dtype:  <class 'str'>\n",
+      "SourceImageSequence :  dtype:  <class 'pydicom.sequence.Sequence'>\n",
+      "SpecificCharacterSet :  dtype:  <class 'str'>\n",
+      "SpiralPitchFactor :  dtype:  <class 'float'>\n",
+      "StudyDate :  dtype:  <class 'str'>\n",
+      "StudyID :  dtype:  <class 'str'>\n",
+      "StudyInstanceUID :  dtype:  <class 'pydicom.uid.UID'>\n",
+      "StudyTime :  dtype:  <class 'str'>\n",
+      "TableFeedPerRotation :  dtype:  <class 'float'>\n",
+      "TableHeight :  dtype:  <class 'pydicom.valuerep.DSfloat'>\n",
+      "TableSpeed :  dtype:  <class 'float'>\n",
+      "TimeOfLastCalibration :  dtype:  <class 'str'>\n",
+      "TotalCollimationWidth :  dtype:  <class 'float'>\n",
+      "WindowCenter :  dtype:  <class 'pydicom.multival.MultiValue'>\n",
+      "WindowCenterWidthExplanation :  dtype:  <class 'pydicom.multival.MultiValue'>\n",
+      "WindowWidth :  dtype:  <class 'pydicom.multival.MultiValue'>\n",
+      "XRayTubeCurrent :  dtype:  <class 'pydicom.valuerep.IS'>\n",
       "====================================================================================================\n",
       "AccessionNumber : HDCUDPMCYOFNZAV\n",
       "AcquisitionDate : 20171203\n",
@@ -183,6 +284,177 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-26T17:58:12.723738Z",
+     "start_time": "2024-04-26T17:58:12.720691Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# The harder way to read the DICOM file:\n",
+    "print(scan_frame[0x0010,0x0010]) # field name\n",
+    "print(scan_frame[0x0010,0x0010].value) # value"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0010, 0010) Patient's Name                      PN: 'Anonymous^Patient'\n",
+      "Anonymous^Patient\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-26T17:58:12.911625Z",
+     "start_time": "2024-04-26T17:58:12.724742Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Gadermayrs Kollege:\n",
+    "print(scan_frame[0x0008,0x0104]) # field name\n",
+    "print(scan_frame[0x0008,0x0104].value) # value\n",
+    "\n",
+    "# -> See CTDIPhantomTypeCodeSequence (sub dataset) below"
+   ],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "(0008, 0104)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[5], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# Gadermayrs Kollege:\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m \u001B[38;5;28mprint\u001B[39m(scan_frame[\u001B[38;5;241m0x0008\u001B[39m,\u001B[38;5;241m0x0104\u001B[39m]) \u001B[38;5;66;03m# field name\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28mprint\u001B[39m(scan_frame[\u001B[38;5;241m0x0008\u001B[39m,\u001B[38;5;241m0x0104\u001B[39m]\u001B[38;5;241m.\u001B[39mvalue)\n",
+      "File \u001B[1;32m~\\miniconda3\\envs\\R&D\\Lib\\site-packages\\pydicom\\dataset.py:988\u001B[0m, in \u001B[0;36mDataset.__getitem__\u001B[1;34m(self, key)\u001B[0m\n\u001B[0;32m    985\u001B[0m     \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m exc:\n\u001B[0;32m    986\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mkey\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mexc\u001B[39;00m\n\u001B[1;32m--> 988\u001B[0m elem \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_dict[tag]\n\u001B[0;32m    990\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(elem, RawDataElement):\n\u001B[0;32m    991\u001B[0m     \u001B[38;5;66;03m# If a deferred read, then go get the value now\u001B[39;00m\n\u001B[0;32m    992\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m elem\u001B[38;5;241m.\u001B[39mvalue \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;129;01mand\u001B[39;00m elem\u001B[38;5;241m.\u001B[39mlength \u001B[38;5;241m!=\u001B[39m \u001B[38;5;241m0\u001B[39m:\n",
+      "\u001B[1;31mKeyError\u001B[0m: (0008, 0104)"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# Sub Dataset test:\n",
+    "\n",
+    "# it is a sequence:\n",
+    "print('value CTDIPhantomTypeCodeSequence:',scan_frame.CTDIPhantomTypeCodeSequence)\n",
+    "print('type:', type(scan_frame.CTDIPhantomTypeCodeSequence))\n",
+    "\n",
+    "# which is also a dataset:\n",
+    "print('value CTDIPhantomTypeCodeSequence[0]:', scan_frame.CTDIPhantomTypeCodeSequence[0])\n",
+    "print('type:',type(scan_frame.CTDIPhantomTypeCodeSequence[0]))\n",
+    "print(scan_frame.CTDIPhantomTypeCodeSequence[0].CodeValue)\n",
+    "print(scan_frame.CTDIPhantomTypeCodeSequence[0].CodingSchemeDesignator)\n",
+    "print(scan_frame.CTDIPhantomTypeCodeSequence[0].CodeMeaning) # THIS IS THE VALUE (see address = 0008,0104)"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "scan_frame.file_meta",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "scan_frame.file_meta.dir()",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "for attribute in scan_frame.file_meta.dir():\n",
+    "    print(attribute, \":\", \" dtype: \", type(getattr(scan_frame.file_meta, attribute, None)))"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "print(type(scan_frame.IssuerOfAccessionNumberSequence[0]))\n",
+    "print(scan_frame.IssuerOfAccessionNumberSequence[0])\n",
+    "print(scan_frame.IssuerOfAccessionNumberSequence[0].dir())\n",
+    "print(scan_frame.CTDIPhantomTypeCodeSequence[0].dir())"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# So we can read it like this:\n",
+    "print(scan_frame.CTDIPhantomTypeCodeSequence[0].CodeMeaning)\n",
+    "# Maybe this could also be used?:\n",
+    "print(scan_frame.BodyPartExamined)"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "print(type(scan_frame.ImageOrientationPatient[0]))\n",
+    "print(scan_frame.ImageOrientationPatient[0])"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "print(scan_frame.PatientName)\n",
+    "print(type(scan_frame.PatientName))\n",
+    "print(scan_frame.PatientName.family_name)\n",
+    "print(scan_frame.PatientName.given_name)\n",
+    "print(scan_frame.PatientName.middle_name)\n",
+    "print(scan_frame.PatientName.components)"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-26T17:59:20.909531Z",
+     "start_time": "2024-04-26T17:59:20.905698Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "type(scan_frame.ConvolutionKernel[1])",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "execution_count": 9
