added new Custom modell and dataset

--- a/4_Modelling/Flo/2D_CNN_Projection.ipynb
+++ b/4_Modelling/Flo/2D_CNN_Projection.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-13T15:40:49.162239Z",
-     "start_time": "2024-08-13T15:40:47.022433Z"
+     "end_time": "2024-08-20T14:05:12.642186Z",
+     "start_time": "2024-08-20T14:05:10.528369Z"
     }
    },
    "source": [
@@ -18,7 +18,8 @@
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import transforms, models\n",
-    "from torchvision.transforms import v2"
+    "from torchvision.transforms import v2\n",
+    "from CustomModels import CTWeightRegressor2D"
    ],
    "outputs": [],
    "execution_count": 1
@@ -26,15 +27,17 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-13T15:40:49.166794Z",
-     "start_time": "2024-08-13T15:40:49.162746Z"
+     "end_time": "2024-08-20T14:05:12.651824Z",
+     "start_time": "2024-08-20T14:05:12.646719Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "from pathlib import Path\n",
     "# include ../../3_Datapreparation\n",
-    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '../../3_Data_Preparation')))\n",
-    "from CT_Dataset import CtScanDataset"
+    "project_dir = Path(os.getcwd()).resolve().parent.parent\n",
+    "sys.path.append(str(project_dir / '3_Data_Preparation'))\n",
+    "from CT_Datasets import CtScanDataset, CtScanDatasetExtended"
    ],
    "id": "2a5202a698a87bec",
    "outputs": [],
@@ -43,13 +46,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-12T15:05:47.203945Z",
-     "start_time": "2024-08-12T15:05:47.048078Z"
+     "end_time": "2024-08-20T14:05:12.850428Z",
+     "start_time": "2024-08-20T14:05:12.696244Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "dataset = CtScanDataset(\"../../Data\", df_query='BodyPart == \"Stamm\"', transform=None)\n",
+    "dataset = CtScanDataset(df_query='BodyPart == \"Stamm\"', transform=None)\n",
     "print(dataset[0][0].shape)\n",
     "dataset[0]"
    ],
@@ -117,6 +120,91 @@
        " 73.0)"
       ]
      },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-20T14:07:27.592174Z",
+     "start_time": "2024-08-20T14:07:27.440778Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "dataset_extended = CtScanDatasetExtended(df_query='BodyPart == \"Stamm\"', pixel_array_transform=None, imagenet_scaling_factor=True)\n",
+    "print(dataset_extended[0][0].shape)\n",
+    "dataset_extended[0]"
+   ],
+   "id": "39198f6f25162dd6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(567, 512, 512)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]],\n",
+       " \n",
+       "        ...,\n",
+       " \n",
+       "        [[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]]], dtype=uint16),\n",
+       " [2.53125],\n",
+       " 73.0)"
+      ]
+     },
      "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
@@ -125,17 +213,12 @@
    "execution_count": 6
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-12T15:05:47.207239Z",
-     "start_time": "2024-08-12T15:05:47.203945Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": "",
-   "id": "39198f6f25162dd6",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": null,
+   "source": "",
+   "id": "d4919cc5613e9169"
   },
   {
    "metadata": {
