incorporating multiple training scenarios and small change to df cleaning

--- a/4_Modelling/Flo/2D_CNN_Projection.ipynb
+++ b/4_Modelling/Flo/2D_CNN_Projection.ipynb
@@ -19,7 +19,7 @@
     "from torch.utils.data import DataLoader\n",
     "from torchvision import transforms, models\n",
     "from torchvision.transforms import v2\n",
-    "from CustomModels import CTWeightRegressor2D"
+    "from CustomModels import CtWeightRegressorAdditionalParams2D"
    ],
    "outputs": [],
    "execution_count": 1
