--- a/5_Evaluation/Flo/Model_Evaluation.ipynb
+++ b/5_Evaluation/Flo/Model_Evaluation.ipynb
@@ -2,15 +2,181 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-08-31T15:26:48.535541Z",
+     "start_time": "2024-08-31T15:26:48.122822Z"
+    }
    },
+   "source": "import pandas as pd",
    "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-31T15:27:19.951723Z",
+     "start_time": "2024-08-31T15:27:19.938744Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    ""
-   ]
+    "# Load the data\n",
+    "df = pd.read_csv('model_statistics.csv')\n",
+    "df"
+   ],
+   "id": "7fc9d06a85577090",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  model_name                        dataset_name  train_loss   val_loss  \\\n",
+       "0   resnet18                     coronal_scaling    6.994072   5.794622   \n",
+       "1   resnet18                    sagittal_scaling    8.575839  89.526956   \n",
+       "2   resnet18                     coronal_scaling    6.136872   6.739621   \n",
+       "3   resnet18                    sagittal_scaling    6.937764   7.357553   \n",
+       "4   resnet18     axial_spacing_thickness_scaling    6.752290  12.519956   \n",
+       "5   resnet18   coronal_spacing_thickness_scaling    8.360463  35.890387   \n",
+       "6   resnet18  sagittal_spacing_thickness_scaling    5.499034  12.314031   \n",
+       "\n",
+       "   epochs_trained  with_scaling_factor  multiplied_scaling_factor  \\\n",
+       "0              10                 True                      False   \n",
+       "1               5                 True                      False   \n",
+       "2              10                 True                       True   \n",
+       "3              10                 True                       True   \n",
+       "4               7                 True                      False   \n",
+       "5               6                 True                      False   \n",
+       "6              10                 True                      False   \n",
+       "\n",
+       "                                   additional_params  \n",
+       "0                                 ['scaling_factor']  \n",
+       "1                                 ['scaling_factor']  \n",
+       "2                                 ['scaling_factor']  \n",
+       "3                                 ['scaling_factor']  \n",
+       "4  ['scaling_factor', 'pixel_spacing', 'slice_thi...  \n",
+       "5  ['scaling_factor', 'pixel_spacing', 'slice_thi...  \n",
+       "6  ['scaling_factor', 'pixel_spacing', 'slice_thi...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>dataset_name</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>val_loss</th>\n",
+       "      <th>epochs_trained</th>\n",
+       "      <th>with_scaling_factor</th>\n",
+       "      <th>multiplied_scaling_factor</th>\n",
+       "      <th>additional_params</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>resnet18</td>\n",
+       "      <td>coronal_scaling</td>\n",
+       "      <td>6.994072</td>\n",
+       "      <td>5.794622</td>\n",
+       "      <td>10</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>['scaling_factor']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>resnet18</td>\n",
+       "      <td>sagittal_scaling</td>\n",
+       "      <td>8.575839</td>\n",
+       "      <td>89.526956</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>['scaling_factor']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>resnet18</td>\n",
+       "      <td>coronal_scaling</td>\n",
+       "      <td>6.136872</td>\n",
+       "      <td>6.739621</td>\n",
+       "      <td>10</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>['scaling_factor']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>resnet18</td>\n",
+       "      <td>sagittal_scaling</td>\n",
+       "      <td>6.937764</td>\n",
+       "      <td>7.357553</td>\n",
+       "      <td>10</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>['scaling_factor']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>resnet18</td>\n",
+       "      <td>axial_spacing_thickness_scaling</td>\n",
+       "      <td>6.752290</td>\n",
+       "      <td>12.519956</td>\n",
+       "      <td>7</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>['scaling_factor', 'pixel_spacing', 'slice_thi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>resnet18</td>\n",
+       "      <td>coronal_spacing_thickness_scaling</td>\n",
+       "      <td>8.360463</td>\n",
+       "      <td>35.890387</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>['scaling_factor', 'pixel_spacing', 'slice_thi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>resnet18</td>\n",
+       "      <td>sagittal_spacing_thickness_scaling</td>\n",
+       "      <td>5.499034</td>\n",
+       "      <td>12.314031</td>\n",
+       "      <td>10</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>['scaling_factor', 'pixel_spacing', 'slice_thi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
