--- a/2_EDA/EDA_Metadata.ipynb
+++ b/2_EDA/EDA_Metadata.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-12T14:10:15.196299Z",
-     "start_time": "2024-08-12T14:10:15.186709Z"
+     "end_time": "2024-09-07T13:21:24.391082Z",
+     "start_time": "2024-09-07T13:21:24.378779Z"
     }
    },
    "source": [
@@ -18,6 +18,44 @@
    ],
    "outputs": [],
    "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-07T13:22:17.705881Z",
+     "start_time": "2024-09-07T13:22:17.692514Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_feather('../Data/dicom_df.feather')\n",
+    "df[\"ContrastFlowDuration\"]"
+   ],
+   "id": "7e915c38315f6a54",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0              None\n",
+       "1      [33.0, 13.0]\n",
+       "2              None\n",
+       "3              None\n",
+       "4              None\n",
+       "           ...     \n",
+       "678            None\n",
+       "679            None\n",
+       "680            None\n",
+       "681            None\n",
+       "682            None\n",
+       "Name: ContrastFlowDuration, Length: 683, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
