Applying slope and intercept to pixel values

--- a/3_Data_Preparation/Justin/Segmentation_test.ipynb
+++ b/3_Data_Preparation/Justin/Segmentation_test.ipynb
@@ -1568,46 +1568,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Air: 0\n",
-      "Fat: 0\n",
-      "Soft tissue on contrast CT: 2470243\n",
-      "Bone Cancellous: 740858\n",
-      "Bone Cortical: 1069760\n",
-      "Subdural hematoma (First hours): 3645180\n",
-      "Subdural hematoma (After 3 days): 3887326\n",
-      "Subdural hematoma (After 10–14 days): 734639\n",
-      "Other blood Unclotted: 3316208\n",
-      "Other blood Clotted: 4503699\n",
-      "Pleural effusion Transudate: 782244\n",
-      "Pleural effusion Exudate: 1922496\n",
-      "Other fluids Chyle: 0\n",
-      "Water: 87690\n",
-      "Urine: 825867\n",
-      "Bile: 825867\n",
-      "CSF: 161454\n",
-      "Abscess/Pus: 3252899\n",
-      "Mucus: 12100300\n",
-      "Lung Parenchyma: 0\n",
-      "Kidney: 2313276\n",
-      "Liver: 2381025\n",
-      "Lymph nodes: 706074\n",
-      "Muscle: 2610269\n",
-      "Thymus (Children): 1766744\n",
-      "Thymus (Adolescents): 10980531\n",
-      "White matter: 871483\n",
-      "Grey matter: 1112109\n",
-      "Gallstone Cholesterol stone: 9524351\n",
-      "Gallstone Bilirubin stone: 2065496\n",
-      "Foreign body Windowpane glass: 11689\n",
-      "Foreign body Aluminum, tarmac, etc.: 202\n",
-      "Foreign body Limestone: 1\n",
+      "Air: 2903255\n",
+      "Fat: 4181626\n",
+      "Soft tissue on contrast CT: 2912287\n",
+      "Bone Cancellous: 443760\n",
+      "Bone Cortical: 441709\n",
+      "Subdural hematoma (First hours): 1293107\n",
+      "Subdural hematoma (After 3 days): 1931545\n",
+      "Subdural hematoma (After 10–14 days): 621882\n",
+      "Other blood Unclotted: 3538910\n",
+      "Other blood Clotted: 3729109\n",
+      "Pleural effusion Transudate: 745887\n",
+      "Pleural effusion Exudate: 1958824\n",
+      "Other fluids Chyle: 43570\n",
+      "Water: 47497\n",
+      "Urine: 1074879\n",
+      "Bile: 1074879\n",
+      "CSF: 58501\n",
+      "Abscess/Pus: 3486301\n",
+      "Mucus: 10301649\n",
+      "Lung Parenchyma: 721860\n",
+      "Kidney: 2399227\n",
+      "Liver: 2088636\n",
+      "Lymph nodes: 648848\n",
+      "Muscle: 2766680\n",
+      "Thymus (Children): 1780099\n",
+      "Thymus (Adolescents): 8796571\n",
+      "White matter: 802811\n",
+      "Grey matter: 1046269\n",
+      "Gallstone Cholesterol stone: 7181242\n",
+      "Gallstone Bilirubin stone: 1303114\n",
+      "Foreign body Windowpane glass: 1739\n",
+      "Foreign body Aluminum, tarmac, etc.: 5\n",
+      "Foreign body Limestone: 0\n",
       "Foreign body Copper: 0\n",
       "Foreign body Silver: 0\n",
       "Foreign body Steel: 0\n",
@@ -1656,7 +1656,8 @@
     "    \"Foreign body Gold/Steel/Brass\": (30000, 30000)\n",
     "}\n",
     "\n",
-    "def bin_hounsfield_values(image_array_1d, hounsfield_scale):\n",
+    "def bin_hounsfield_values(image_array_1d, slope, intercept, hounsfield_scale):\n",
+    "    hu_array = (image_array_1d * slope) + intercept\n",
     "    # Initialize dictionary to store bin counts\n",
     "    bin_counts = {key: 0 for key in hounsfield_scale.keys()}\n",
     "    \n",
@@ -1666,14 +1667,14 @@
     "            continue  # Skip undefined ranges\n",
     "        \n",
     "        # Create a mask for values that fall within the current Hounsfield range\n",
-    "        mask = (image_array_1d - 1000 >= lower_bound - 1) & (image_array_1d - 1000 <= upper_bound + 1)\n",
+    "        mask = (hu_array >= lower_bound) & (hu_array <= upper_bound)\n",
     "        \n",
     "        # Count how many values fall in this range and store the result\n",
     "        bin_counts[label] = np.sum(mask)\n",
     "\n",
     "    return bin_counts\n",
     "\n",
-    "result = bin_hounsfield_values(image_array_1d, BINS)\n",
+    "result = bin_hounsfield_values(image_array_1d, slope, intercept, BINS)\n",
     "\n",
     "# Output the bin counts\n",
     "for tissue_type, count in result.items():\n",
