--- a/4_Modelling/Flo/2D_CNN_Projection.ipynb
+++ b/4_Modelling/Flo/2D_CNN_Projection.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-02T12:46:48.673708Z",
-     "start_time": "2024-09-02T12:46:44.199672Z"
+     "end_time": "2024-10-17T16:04:02.416293Z",
+     "start_time": "2024-10-17T16:04:00.409971Z"
     }
    },
    "source": [
@@ -16,7 +16,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import torch\n",
-    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import DataLoader, random_split\n",
     "from torchvision import transforms, models\n",
     "from torchvision.transforms import v2\n",
     "from CustomModels import CtWeightRegressorAdditionalParams2D"
@@ -27,13 +27,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-02T12:46:48.686467Z",
-     "start_time": "2024-09-02T12:46:48.681878Z"
+     "end_time": "2024-10-17T16:06:58.825187Z",
+     "start_time": "2024-10-17T16:06:58.822182Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from pathlib import Path\n",
+    "from torch.utils.data import DataLoader, random_split\n",
     "# include ../../3_Datapreparation\n",
     "project_dir = Path(os.getcwd()).resolve().parent.parent\n",
     "sys.path.append(str(project_dir / '3_Data_Preparation'))\n",
@@ -41,13 +42,13 @@
    ],
    "id": "2a5202a698a87bec",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-02T12:46:48.957400Z",
-     "start_time": "2024-09-02T12:46:48.694671Z"
+     "end_time": "2024-10-17T16:04:02.578065Z",
+     "start_time": "2024-10-17T16:04:02.429068Z"
     }
    },
    "cell_type": "code",
@@ -126,6 +127,97 @@
     }
    ],
    "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T16:07:01.120590Z",
+     "start_time": "2024-10-17T16:07:01.117942Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "train_dataset, val_dataset = random_split(\n",
+    "            dataset, [int(0.8 * len(dataset)), len(dataset) - int(0.8 * len(dataset))],\n",
+    "            generator=torch.Generator().manual_seed(42)\n",
+    "        )"
+   ],
+   "id": "10ab24a9e0381f08",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T16:35:20.771014Z",
+     "start_time": "2024-10-17T16:35:20.737762Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "train_dataset[0]",
+   "id": "ec68a88d73c5120",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]],\n",
+       " \n",
+       "        ...,\n",
+       " \n",
+       "        [[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]],\n",
+       " \n",
+       "        [[0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         ...,\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0],\n",
+       "         [0, 0, 0, ..., 0, 0, 0]]], dtype=uint16),\n",
+       " 61.0)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
   },
   {
    "metadata": {
